# btns

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  output  sdkconfig.defaults
.cursor/rules/: cursor-rules.mdc  project-overview.mdc
docs/: circuits  datasheets  notes  pinouts
main/: CMakeLists.txt  main.c
main/config/include/: README.md  config.h.sample  define.h  defines.h  device.h  include.h  includes.h  init.h
main/config/src/: device.c  init.c
main/core/include/: bits.h  broker.h  ctrl_net.h  err.h  ha.h  i2c_master.h  i2s.h  log.h  net_evt.h  nvs.h  perf.h  pin.h  pins.h  sensor.h  sym.h  tick.h  timex.h
main/core/src/: bits.c  broker.c  ctrl_net.c  ha.c  i2c_master.c  i2s.c  log.c  net_evt.c  nvs.c  perf.c  pin.c  pins.c  sensor.c  sym.c  tick.c  timex.c
main/device/include/: btns.h  encoder.h  grid.h  led_strip_encoder.h  leds.h  mmwave.h  pcm5102.h  seg7.h  strip.h  ws2812.h
main/device/src/: btns.c  encoder.c  grid.c  leds.c  mmwave.c  pcm5102.c  seg7.c  strip.c  ws2812.c
main/led/include/: encoder.h  strip.h
main/led/src/: encoder.c  strip.c
main/net/include/: evt.h  ha.h  mqtt.h  net.h  ntp.h
main/net/src/: evt.c  ha.c  mqtt.c  net.c  ntp.c
main/util/include/: log.h  sym.h
main/util/src/: log.c  sym.c
removed/: led_strip_encoder.c  strip_bad.c  strip_bad.h
