set(CMAKE_C_STANDARD 99)
set(CMAKE_C_STANDARD_REQUIRED ON)
idf_component_register(
    SRCS 
        "main.c"
        "config/src/init.c"
        "core/src/nvs.c"
        "core/src/bits.c"
        "core/src/pins.c"
        "core/src/sensor.c"
        "util/src/sym.c"
        "util/src/log.c"
        "net/src/net.c"
        "net/src/evt.c"
        "net/src/mqtt.c"
        "net/src/ntp.c"
        "net/src/ha.c"
        "core/src/perf.c"
        "device/src/ws2812.c"
        "device/src/seg7.c"
        "device/src/mmwave.c"
    INCLUDE_DIRS
        "util/include"
        "config/include"
        "core/include"
        "net/include"
        "device/include"
    REQUIRES
        nvs_flash
        esp_driver_gpio
        esp_driver_rmt
        esp_netif
        esp_wifi
        lwip
        mqtt
        esp_driver_i2c
)